basic properties of project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 数据源名称
 spring.datasource.name=defaultDataSource
 # 数据库连接地址
-spring.datasource.url=jdbc:mysql://localhost:3306/blue?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/mystore?serverTimezone=UTC&characterEncoding=utf-8
 # 数据库用户名&密码：
-spring.datasource.username=***
-spring.datasource.password=***
+spring.datasource.username=root
+spring.datasource.password=abc123
 # 应用服务 WEB 访问端口
-server.port=8080
+server.port=8099
 
+#打印mybatis执行的语句
+logging.level.com.example.mystoreapidev.persistence=trace
 
