--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ server.port=8099
 #打印mybatis执行的语句
 logging.level.com.example.mystoreapidev.persistence=trace
 
+#image server
+image.server.url=XXX
+image.server.username=YYY
+image.server.password=ZZZ
+
