AliOSS configuration and basic framework finish

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,10 @@ image.server.url=XXX
 image.server.username=YYY
 image.server.password=ZZZ
 
+#Ali OSS
+aliyun.oss.endpoint=oss-cn-shenzhen.aliyuncs.com
+aliyun.oss.accessId=LTAI5t8WwhfTVeqrJEvEwhF5
+aliyun.oss.accessKey=mfXKnbXLGa7gsgdajhTSt4xbVGG8Qx
+aliyun.oss.bucket=mystore-demo
+aliyun.oss.dir=test
+
