--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,7 @@ aliyun.oss.accessId=LTAI5t8WwhfTVeqrJEvEwhF5
 aliyun.oss.accessKey=mfXKnbXLGa7gsgdajhTSt4xbVGG8Qx
 aliyun.oss.bucket=mystore-demo
 aliyun.oss.dir=test
+aliyun.oss.policy.expire=120
+#max size of update image, unit is MB
+aliyun.oss.policy.maxSize = 10
 
