feat(VO, controller, service): add OSS callback function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ aliyun.oss.policy.expire=120
 #max size of update image, unit is MB
 aliyun.oss.policy.maxSize = 10
 
+aliyun.oss.callback=https://5714a17e18.zicp.fun/alioss/callback
+
